# cyRPi

./: README.md
2020_Pi_QR-reader/: README.md  auto_demo.sh
2020_Pi_QR-reader/LOCV/: Camera.py  GUI_QRscan.py  GUI_QRscanX.py  auto_demo.sh  cy_CvOSD.py  cy_ViPanel.py  qrscan.cpp  web_camera.py
2020_Pi_rvcam/: GUI_client.py  cy_ViPanel.py  pi_grabber.py  rvcam_server.py  utils.py
20Q3_CrossCompile-opencv/: NOTE_Pi-Work.md  README.md
20Q3_raspicam/: README.md
20Q3_raspicam/examples/with_cv/: CMakeLists.txt  simpletest_raspicam_cv.cpp
20Q3_raspicam/examples/without_cv/: CMakeLists.txt  simpletest_raspicam.cpp
QRscanner/LOCV/: GUI_QRscan.py  GUI_QRscan.py.SAVE  cy_ViPanel.py  qrCodeOpencv.py
cross-compile-opencv/: NOTE_Cross compiling OpenCV 4 for Raspberry Pi.md
face-recognition/pi-face-recognition/: encodings.pickle
objDetect_MobileNetSSD/: README.md
pyimagesearch/picamera/: .gitignore
pyimagesearch/picamera/2015_03_30_picamera-code/: test_image.py
wiringPi/: README.md  test_buzzer.c  test_ttyUSB0.c
